# conf

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: codacy.yml  codeql-analysis.yml
cmake/: defines.h.in
docs/: annotated.html  annotated_dup.js  classconf_1_1Error.html  classconf_1_1Error.js  classconf_1_1Reader.html  classconf_1_1Reader.js  classconf_1_1Writer.html  classconf_1_1Writer.js  classconf_1_1_error.html  classconf_1_1_error.js  classconf_1_1_reader.html  classconf_1_1_reader.js  classconf_1_1_writer.html  classconf_1_1_writer.js  classes.html  common_8h.html  common_8h.js  dir_0af74dce6ed792f14cfe74ff7f287b3e.html  dir_0af74dce6ed792f14cfe74ff7f287b3e.js  dir_5078fa4b037495af7f2183084da91e6b.html  dir_5078fa4b037495af7f2183084da91e6b.js  dir_5cec92fd47c0900910bbc2480fdfd7be.html  dir_b83c5bfa094d9549d67909f0b459d78c.html  dir_b83c5bfa094d9549d67909f0b459d78c.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  error_8hpp.html  error_8hpp.js  files.html  functions.html  functions_func.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  hierarchy.html  hierarchy.js  index.html  md_BUILDING.html  (+13 more)
include/conf/: common.h  reader.h  writer.h
source/: reader.c  writer.c
tests/: test_reader.c  test_writer.c
wrappers/cpp/conf/: error.hpp  reader.hpp  writer.hpp
